--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "      <td>3.81</td>\n",
        "      <td>Bachelors</td>\n",
        "      <td>Providence</td>\n",
-       "      <td>M</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
@@ -81,7 +81,7 @@
        "      <td>3.81</td>\n",
        "      <td>Bachelors</td>\n",
        "      <td>Providence</td>\n",
-       "      <td>M</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
@@ -105,7 +105,7 @@
        "      <td>3.81</td>\n",
        "      <td>Bachelors</td>\n",
        "      <td>Providence</td>\n",
-       "      <td>M</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
@@ -129,7 +129,7 @@
        "      <td>3.81</td>\n",
        "      <td>Bachelors</td>\n",
        "      <td>Providence</td>\n",
-       "      <td>M</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1.0</td>\n",
@@ -153,7 +153,7 @@
        "      <td>3.81</td>\n",
        "      <td>Bachelors</td>\n",
        "      <td>Providence</td>\n",
-       "      <td>M</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1.0</td>\n",
@@ -176,12 +176,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   Applicant ID            School Name   GPA     Degree    Location Gender  \\\n",
-       "0             0  Providence University  3.81  Bachelors  Providence      M   \n",
-       "1             1  Providence University  3.81  Bachelors  Providence      M   \n",
-       "2             2  Providence University  3.81  Bachelors  Providence      M   \n",
-       "3             3  Providence University  3.81  Bachelors  Providence      M   \n",
-       "4             4  Providence University  3.81  Bachelors  Providence      M   \n",
+       "   Applicant ID            School Name   GPA     Degree    Location  Gender  \\\n",
+       "0             0  Providence University  3.81  Bachelors  Providence     1.0   \n",
+       "1             1  Providence University  3.81  Bachelors  Providence     1.0   \n",
+       "2             2  Providence University  3.81  Bachelors  Providence     1.0   \n",
+       "3             3  Providence University  3.81  Bachelors  Providence     1.0   \n",
+       "4             4  Providence University  3.81  Bachelors  Providence     1.0   \n",
        "\n",
        "   Veteran status  Work authorization  Disability  Ethnicity  ... Start 1  \\\n",
        "0               0                   0         0.0        0.0  ...    5/20   \n",
@@ -200,7 +200,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,8 +208,10 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error, confusion_matrix\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "# ignore warnings\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -236,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,12 +266,25 @@
     "\n",
     "    # Calculate Balanced Accuracy for Regression (using RMSE)\n",
     "    overall_mean_score = data['score'].mean()\n",
-    "    mse_privileged = mean_squared_error(data[data[attr] == 1]['score'], \n",
-    "                                        np.full(data[data[attr] == 1].shape[0], overall_mean_score))\n",
-    "    mse_unprivileged = mean_squared_error(data[data[attr] == 0]['score'], \n",
-    "                                          np.full(data[data[attr] == 0].shape[0], overall_mean_score))\n",
-    "    balanced_accuracy_regression = 1 - (np.sqrt(mse_privileged) + np.sqrt(mse_unprivileged)) / 2\n",
-    "    print(f\"Balanced Accuracy (Regression) based on {attr}:\", balanced_accuracy_regression)\n",
+    "    # mse_privileged = mean_squared_error(data[data[attr] == 1]['score'], \n",
+    "    #                                     np.full(data[data[attr] == 1].shape[0], overall_mean_score))\n",
+    "    # mse_unprivileged = mean_squared_error(data[data[attr] == 0]['score'], \n",
+    "    #                                       np.full(data[data[attr] == 0].shape[0], overall_mean_score))\n",
+    "    # balanced_accuracy_regression = 1 - (np.sqrt(mse_privileged) + np.sqrt(mse_unprivileged)) / 2\n",
+    "    mae_privileged = mean_absolute_error(data[data[attr] == 1]['score'], \n",
+    "                                     np.full(data[data[attr] == 1].shape[0], overall_mean_score))\n",
+    "    mae_unprivileged = mean_absolute_error(data[data[attr] == 0]['score'], \n",
+    "                                        np.full(data[data[attr] == 0].shape[0], overall_mean_score))\n",
+    "\n",
+    "    # Optionally calculate R-squared for each group\n",
+    "    r2_privileged = r2_score(data[data[attr] == 1]['score'], \n",
+    "                            np.full(data[data[attr] == 1].shape[0], overall_mean_score))\n",
+    "    r2_unprivileged = r2_score(data[data[attr] == 0]['score'], \n",
+    "                            np.full(data[data[attr] == 0].shape[0], overall_mean_score))\n",
+    "    print(\"Mean Absolute Error (Privileged):\", mae_privileged)\n",
+    "    print(\"Mean Absolute Error (Unprivileged):\", mae_unprivileged)\n",
+    "    print(\"R-squared (Privileged):\", r2_privileged)\n",
+    "    print(\"R-squared (Unprivileged):\", r2_unprivileged)\n",
     "\n",
     "    # Calculate Average Odds Difference based on residuals\n",
     "    residuals_privileged = data[data[attr] == 1]['score'] - overall_mean_score\n",
@@ -300,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +348,6 @@
     "\n",
     "    tpr_privileged = cm_privileged[1, 1] / (cm_privileged[1, 0] + cm_privileged[1, 1])\n",
     "    tpr_unprivileged = cm_unprivileged[1, 1] / (cm_unprivileged[1, 0] + cm_unprivileged[1, 1])\n",
-    "    print(\"cm_privileged\", cm_privileged)\n",
     "    equal_opportunity_difference = tpr_unprivileged - tpr_privileged\n",
     "    print(f\"Equal Opportunity Difference based on {attr}:\", equal_opportunity_difference)\n",
     "\n",
@@ -362,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -372,61 +386,51 @@
       "Metrics for Gender\n",
       "Disparate Impact based on Gender: 0.9848074875798438\n",
       "Statistical Parity Difference based on Gender: -0.07611111111111146\n",
-      "Balanced Accuracy (Regression) based on Gender: -1.9097113296201043\n",
+      "Mean Absolute Error (Privileged): 2.572015020576132\n",
+      "Mean Absolute Error (Unprivileged): 2.490090946502058\n",
+      "R-squared (Privileged): -0.00013386002675597197\n",
+      "R-squared (Unprivileged): -0.00021342060485673997\n",
       "Average Odds Difference (Regression) based on Gender: 0.0761111111111111\n",
-      "Disparate Impact based on Gender: 0.6507936507936508\n",
-      "Statistical Parity Difference based on Gender: -0.1222222222222222\n",
-      "cm_privileged [[117   0]\n",
-      " [  0  63]]\n",
-      "Equal Opportunity Difference based on Gender: 0.0\n",
       "\n",
       "\n",
       "Metrics for Veteran status\n",
       "Disparate Impact based on Veteran status: 1.0194429413179413\n",
       "Statistical Parity Difference based on Veteran status: 0.09581481481481458\n",
-      "Balanced Accuracy (Regression) based on Veteran status: -1.9254861339430347\n",
+      "Mean Absolute Error (Privileged): 2.578026886145404\n",
+      "Mean Absolute Error (Unprivileged): 2.512111111111111\n",
+      "R-squared (Privileged): -0.0002594992913607097\n",
+      "R-squared (Unprivileged): -0.00027743276929159677\n",
       "Average Odds Difference (Regression) based on Veteran status: 0.09581481481481482\n",
-      "Disparate Impact based on Veteran status: 0.8571428571428572\n",
-      "Statistical Parity Difference based on Veteran status: -0.029629629629629617\n",
-      "cm_privileged [[214   0]\n",
-      " [  0  56]]\n",
-      "Equal Opportunity Difference based on Veteran status: 0.0\n",
       "\n",
       "\n",
       "Metrics for Work authorization\n",
       "Disparate Impact based on Work authorization: 1.047854584254249\n",
       "Statistical Parity Difference based on Work authorization: 0.23255555555555585\n",
-      "Balanced Accuracy (Regression) based on Work authorization: -1.9258565530479688\n",
+      "Mean Absolute Error (Privileged): 2.5355958847736626\n",
+      "Mean Absolute Error (Unprivileged): 2.5545421124828533\n",
+      "R-squared (Privileged): -0.001598048136636887\n",
+      "R-squared (Unprivileged): -0.0015659583534435306\n",
       "Average Odds Difference (Regression) based on Work authorization: 0.23255555555555557\n",
-      "Disparate Impact based on Work authorization: 0.9622641509433961\n",
-      "Statistical Parity Difference based on Work authorization: -0.007407407407407418\n",
-      "cm_privileged [[217   0]\n",
-      " [  0  53]]\n",
-      "Equal Opportunity Difference based on Work authorization: 0.0\n",
       "\n",
       "\n",
       "Metrics for Disability\n",
       "Disparate Impact based on Disability: 1.0203532853285329\n",
       "Statistical Parity Difference based on Disability: 0.10050000000000026\n",
-      "Balanced Accuracy (Regression) based on Disability: -1.9541314949068176\n",
+      "Mean Absolute Error (Privileged): 2.6672878600823045\n",
+      "Mean Absolute Error (Unprivileged): 2.4816767489711937\n",
+      "R-squared (Privileged): -0.00015876828811411947\n",
+      "R-squared (Unprivileged): -0.0004685867753499995\n",
       "Average Odds Difference (Regression) based on Disability: 0.10049999999999999\n",
-      "Disparate Impact based on Disability: 0.9411764705882354\n",
-      "Statistical Parity Difference based on Disability: -0.0111111111111111\n",
-      "cm_privileged [[146   0]\n",
-      " [  0  34]]\n",
-      "Equal Opportunity Difference based on Disability: 0.0\n",
       "\n",
       "\n",
       "Metrics for Ethnicity\n",
       "Disparate Impact based on Ethnicity: 1.0275380738956896\n",
       "Statistical Parity Difference based on Ethnicity: 0.13722222222222147\n",
-      "Balanced Accuracy (Regression) based on Ethnicity: -1.9292518058782906\n",
+      "Mean Absolute Error (Privileged): 2.57715658436214\n",
+      "Mean Absolute Error (Unprivileged): 2.4962475308641974\n",
+      "R-squared (Privileged): -5.76721622413956e-06\n",
+      "R-squared (Unprivileged): -0.0024738503239893905\n",
       "Average Odds Difference (Regression) based on Ethnicity: 0.13722222222222227\n",
-      "Disparate Impact based on Ethnicity: 1.090909090909091\n",
-      "Statistical Parity Difference based on Ethnicity: 0.01666666666666669\n",
-      "cm_privileged [[147   0]\n",
-      " [  0  33]]\n",
-      "Equal Opportunity Difference based on Ethnicity: 0.0\n",
       "\n",
       "\n"
      ]
@@ -436,9 +440,78 @@
     "for attr in sensitive_attr:\n",
     "    print(f\"Metrics for {attr}\")\n",
     "    score_metrics(result, attr)\n",
+    "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metrics for Gender\n",
+      "Disparate Impact based on Gender: 0.6507936507936508\n",
+      "Statistical Parity Difference based on Gender: -0.1222222222222222\n",
+      "Equal Opportunity Difference based on Gender: 0.0\n",
+      "\n",
+      "\n",
+      "Metrics for Veteran status\n",
+      "Disparate Impact based on Veteran status: 0.8571428571428572\n",
+      "Statistical Parity Difference based on Veteran status: -0.029629629629629617\n",
+      "Equal Opportunity Difference based on Veteran status: 0.0\n",
+      "\n",
+      "\n",
+      "Metrics for Work authorization\n",
+      "Disparate Impact based on Work authorization: 0.9622641509433961\n",
+      "Statistical Parity Difference based on Work authorization: -0.007407407407407418\n",
+      "Equal Opportunity Difference based on Work authorization: 0.0\n",
+      "\n",
+      "\n",
+      "Metrics for Disability\n",
+      "Disparate Impact based on Disability: 0.9411764705882354\n",
+      "Statistical Parity Difference based on Disability: -0.0111111111111111\n",
+      "Equal Opportunity Difference based on Disability: 0.0\n",
+      "\n",
+      "\n",
+      "Metrics for Ethnicity\n",
+      "Disparate Impact based on Ethnicity: 1.090909090909091\n",
+      "Statistical Parity Difference based on Ethnicity: 0.01666666666666669\n",
+      "Equal Opportunity Difference based on Ethnicity: 0.0\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for attr in sensitive_attr:\n",
+    "    print(f\"Metrics for {attr}\")\n",
     "    eval_metrics(result, attr)\n",
     "    print(\"\\n\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "result.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
