--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,6 +212,9 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
     "# ignore warnings\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -229,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +307,10 @@
      "text": [
       "Disparate Impact based on Ethnicity: 1.0275380738956896\n",
       "Statistical Parity Difference based on Ethnicity: 0.13722222222222147\n",
-      "Balanced Accuracy (Regression) based on Ethnicity: -1.9292518058782906\n",
+      "Mean Absolute Error (Privileged): 2.57715658436214\n",
+      "Mean Absolute Error (Unprivileged): 2.4962475308641974\n",
+      "R-squared (Privileged): -5.76721622413956e-06\n",
+      "R-squared (Unprivileged): -0.0024738503239893905\n",
       "Average Odds Difference (Regression) based on Ethnicity: 0.13722222222222227\n"
      ]
     }
@@ -315,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +371,6 @@
      "text": [
       "Disparate Impact based on Ethnicity: 1.090909090909091\n",
       "Statistical Parity Difference based on Ethnicity: 0.01666666666666669\n",
-      "TPR Privileged based on Ethnicity: 1.0\n",
       "Equal Opportunity Difference based on Ethnicity: 0.0\n"
      ]
     }
@@ -376,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -496,22 +501,196 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "result.columns"
+    "## Regression analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cate_cols = ['School Name', \"Degree\", \"Location\", 'Role 1', 'Start 1', 'End 1', 'Role 2', 'Start 2', 'End 2', 'Role 3',\n",
+    "       'Start 3', 'End 3']\n",
+    "num_cols = [\"GPA\", \"Gender\", \"Veteran status\", \"Work authorization\", \"Disability\", \"Ethnicity\"]\n",
+    "# fillna for cate_cols using mode\n",
+    "for col in cate_cols:\n",
+    "    result[col].fillna(result[col].mode()[0], inplace=True)\n",
+    "# fillna for num_cols using mean\n",
+    "for col in num_cols:\n",
+    "    result[col].fillna(result[col].mean(), inplace=True)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Gender', 'Veteran status', 'Work authorization', 'Disability',\n",
+       "       'Ethnicity'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X = result.drop(['score', \"prediction\", 'Applicant ID'], axis=1)[sensitive_attr]\n",
+    "y = result['score']\n",
+    "\n",
+    "\n",
+    "\n",
+    "categorical_transformer = Pipeline(steps=[\n",
+    "    ('onehot', OneHotEncoder(handle_unknown='ignore'))\n",
+    "])\n",
+    "\n",
+    "\n",
+    "# regression model\n",
+    "model = LinearRegression()\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 8.635572198301835\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Predict and evaluate\n",
+    "model.fit(X_train, y_train)\n",
+    "y_pred = model.predict(X_test)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "print(\"Mean Squared Error:\", mse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gender: 0.2902313299911564\n",
+      "Veteran status: -0.23038445093969992\n",
+      "Work authorization: -0.17185752868660079\n",
+      "Disability: -0.17041185503105022\n",
+      "Ethnicity: -0.007419267085687381\n"
+     ]
+    }
+   ],
+   "source": [
+    "# summarize coefficients\n",
+    "for i in range(len(X.columns)):\n",
+    "    print(f\"{X.columns[i]}: {model.coef_[i]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Audit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Gender', 'Veteran status', 'Work authorization', 'Disability',\n",
+       "       'Ethnicity'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "\n",
+    "# Assuming data and target variables are defined\n",
+    "X = result.drop('prediction', axis=1)\n",
+    "y = result['prediction']\n",
+    "\n",
+    "# Split the dataset for training and testing\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('num', StandardScaler(), num_cols),  # Scale numerical columns\n",
+    "        ('cat', OneHotEncoder(), cate_cols)  # One-hot encode categorical columns\n",
+    "    ])\n",
+    "\n",
+    "# Create a complete pipeline: Preprocessing + Classifier\n",
+    "model = Pipeline([\n",
+    "    ('preprocessor', preprocessor),\n",
+    "    ('classifier', RandomForestClassifier(random_state=42))\n",
+    "])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on test data: 0.8055555555555556\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate the model (example using accuracy)\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict on the test set\n",
+    "predictions = model.predict(X_test)\n",
+    "print(\"Accuracy on test data:\", accuracy_score(y_test, predictions))"
+   ]
   },
   {
    "cell_type": "code",
@@ -537,7 +716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
