--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -208,13 +208,15 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error, confusion_matrix\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error, confusion_matrix, accuracy_score, classification_report\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
     "# ignore warnings\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -222,12 +224,12 @@
     "# Load the datasets\n",
     "result  = pd.read_csv('data/result.csv')\n",
     "result['Gender'] = result['Gender'].map({'M': 1, 'F': 0})\n",
-    "# Ensure correct data types\n",
+    "\n",
     "result['score'] = result['score'].astype(float)\n",
     "\n",
-    "result.head()\n",
+    "sensitive_attr = ['Gender', 'Veteran status', 'Work authorization', 'Disability', 'Ethnicity']\n",
     "\n",
-    "\n"
+    "result.head()\n"
    ]
   },
   {
@@ -236,50 +238,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sensitive_attr = ['Gender', 'Veteran status', 'Work authorization', 'Disability', 'Ethnicity']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def score_metrics(data, attr):\n",
     "    \"\"\"\n",
     "    Calculate fairness metrics for the 'score' column based on a specified attribute.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    - data (DataFrame): The DataFrame containing the data.\n",
-    "    - attr (str): The column name of the attribute based on which to calculate fairness (e.g., 'Gender').\n",
-    "    \n",
-    "    Assumes:\n",
-    "    - 'score' column exists in the DataFrame.\n",
-    "    - The attribute column contains binary values 0 and 1.\n",
     "    \"\"\"\n",
-    "    # Calculate Disparate Impact\n",
+    "    # Disparate Impact\n",
     "    average_score_privileged = data[data[attr] == 1]['score'].mean()\n",
     "    average_score_unprivileged = data[data[attr] == 0]['score'].mean()\n",
     "    disparate_impact = average_score_unprivileged / average_score_privileged\n",
     "    print(f\"Disparate Impact based on {attr}:\", disparate_impact)\n",
     "\n",
-    "    # Calculate Statistical Parity Difference\n",
+    "    # Statistical Parity Difference\n",
     "    statistical_parity_difference = average_score_unprivileged - average_score_privileged\n",
     "    print(f\"Statistical Parity Difference based on {attr}:\", statistical_parity_difference)\n",
     "\n",
-    "    # Calculate Balanced Accuracy for Regression (using RMSE)\n",
+    "    # Balanced Accuracy for Regression (using RMSE)\n",
     "    overall_mean_score = data['score'].mean()\n",
-    "    # mse_privileged = mean_squared_error(data[data[attr] == 1]['score'], \n",
-    "    #                                     np.full(data[data[attr] == 1].shape[0], overall_mean_score))\n",
-    "    # mse_unprivileged = mean_squared_error(data[data[attr] == 0]['score'], \n",
-    "    #                                       np.full(data[data[attr] == 0].shape[0], overall_mean_score))\n",
-    "    # balanced_accuracy_regression = 1 - (np.sqrt(mse_privileged) + np.sqrt(mse_unprivileged)) / 2\n",
     "    mae_privileged = mean_absolute_error(data[data[attr] == 1]['score'], \n",
     "                                     np.full(data[data[attr] == 1].shape[0], overall_mean_score))\n",
     "    mae_unprivileged = mean_absolute_error(data[data[attr] == 0]['score'], \n",
     "                                        np.full(data[data[attr] == 0].shape[0], overall_mean_score))\n",
     "\n",
-    "    # Optionally calculate R-squared for each group\n",
+    "    # R-squared for each group\n",
     "    r2_privileged = r2_score(data[data[attr] == 1]['score'], \n",
     "                            np.full(data[data[attr] == 1].shape[0], overall_mean_score))\n",
     "    r2_unprivileged = r2_score(data[data[attr] == 0]['score'], \n",
@@ -289,7 +269,7 @@
     "    print(\"R-squared (Privileged):\", r2_privileged)\n",
     "    print(\"R-squared (Unprivileged):\", r2_unprivileged)\n",
     "\n",
-    "    # Calculate Average Odds Difference based on residuals\n",
+    "    # Average Odds Difference based on residuals\n",
     "    residuals_privileged = data[data[attr] == 1]['score'] - overall_mean_score\n",
     "    residuals_unprivileged = data[data[attr] == 0]['score'] - overall_mean_score\n",
     "    average_odds_difference = abs(residuals_unprivileged.mean() - residuals_privileged.mean())\n",
@@ -298,90 +278,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Disparate Impact based on Ethnicity: 1.0275380738956896\n",
-      "Statistical Parity Difference based on Ethnicity: 0.13722222222222147\n",
-      "Mean Absolute Error (Privileged): 2.57715658436214\n",
-      "Mean Absolute Error (Unprivileged): 2.4962475308641974\n",
-      "R-squared (Privileged): -5.76721622413956e-06\n",
-      "R-squared (Unprivileged): -0.0024738503239893905\n",
-      "Average Odds Difference (Regression) based on Ethnicity: 0.13722222222222227\n"
-     ]
-    }
-   ],
-   "source": [
-    "score_metrics(result, \"Ethnicity\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def eval_metrics(data, attr):\n",
     "    \"\"\"\n",
     "    Calculate fairness metrics for the 'prediction' column based on a specified attribute.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    - data (DataFrame): The DataFrame containing the data.\n",
-    "    - attr (str): The column name of the attribute based on which to calculate fairness (e.g., 'Gender').\n",
-    "    \n",
-    "    Assumes:\n",
-    "    - 'prediction' column exists in the DataFrame.\n",
-    "    - The attribute column contains binary values 0 and 1.\n",
+    "\n",
     "    \"\"\"\n",
-    "    # Calculate Disparate Impact\n",
+    "    # Disparate Impact\n",
     "    selection_rate_privileged = data[data[attr] == 1]['prediction'].mean()\n",
     "    selection_rate_unprivileged = data[data[attr] == 0]['prediction'].mean()\n",
     "    disparate_impact = selection_rate_unprivileged / selection_rate_privileged\n",
     "    print(f\"Disparate Impact based on {attr}:\", disparate_impact)\n",
     "\n",
-    "    # Calculate Statistical Parity Difference\n",
+    "    # Statistical Parity Difference\n",
     "    statistical_parity_difference = selection_rate_unprivileged - selection_rate_privileged\n",
-    "    print(f\"Statistical Parity Difference based on {attr}:\", statistical_parity_difference)\n",
-    "\n",
-    "    # Calculate Equal Opportunity Difference\n",
-    "    # Note: Correct calculation of TPRs should involve actual and predicted labels. Here we assume 'prediction' is the actual label for simplicity.\n",
-    "    cm_privileged = confusion_matrix(data[data[attr] == 1]['prediction'], data[data[attr] == 1]['prediction'])\n",
-    "    cm_unprivileged = confusion_matrix(data[data[attr] == 0]['prediction'], data[data[attr] == 0]['prediction'])\n",
-    "\n",
-    "    tpr_privileged = cm_privileged[1, 1] / (cm_privileged[1, 0] + cm_privileged[1, 1])\n",
-    "    tpr_unprivileged = cm_unprivileged[1, 1] / (cm_unprivileged[1, 0] + cm_unprivileged[1, 1])\n",
-    "    equal_opportunity_difference = tpr_unprivileged - tpr_privileged\n",
-    "    print(f\"Equal Opportunity Difference based on {attr}:\", equal_opportunity_difference)\n",
-    "\n",
-    "\n"
+    "    print(f\"Statistical Parity Difference based on {attr}:\", statistical_parity_difference)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Disparate Impact based on Ethnicity: 1.090909090909091\n",
-      "Statistical Parity Difference based on Ethnicity: 0.01666666666666669\n",
-      "Equal Opportunity Difference based on Ethnicity: 0.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "eval_metrics(result, \"Ethnicity\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -460,31 +379,26 @@
       "Metrics for Gender\n",
       "Disparate Impact based on Gender: 0.6507936507936508\n",
       "Statistical Parity Difference based on Gender: -0.1222222222222222\n",
-      "Equal Opportunity Difference based on Gender: 0.0\n",
       "\n",
       "\n",
       "Metrics for Veteran status\n",
       "Disparate Impact based on Veteran status: 0.8571428571428572\n",
       "Statistical Parity Difference based on Veteran status: -0.029629629629629617\n",
-      "Equal Opportunity Difference based on Veteran status: 0.0\n",
       "\n",
       "\n",
       "Metrics for Work authorization\n",
       "Disparate Impact based on Work authorization: 0.9622641509433961\n",
       "Statistical Parity Difference based on Work authorization: -0.007407407407407418\n",
-      "Equal Opportunity Difference based on Work authorization: 0.0\n",
       "\n",
       "\n",
       "Metrics for Disability\n",
       "Disparate Impact based on Disability: 0.9411764705882354\n",
       "Statistical Parity Difference based on Disability: -0.0111111111111111\n",
-      "Equal Opportunity Difference based on Disability: 0.0\n",
       "\n",
       "\n",
       "Metrics for Ethnicity\n",
       "Disparate Impact based on Ethnicity: 1.090909090909091\n",
       "Statistical Parity Difference based on Ethnicity: 0.01666666666666669\n",
-      "Equal Opportunity Difference based on Ethnicity: 0.0\n",
       "\n",
       "\n"
      ]
@@ -506,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,29 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Gender', 'Veteran status', 'Work authorization', 'Disability',\n",
-       "       'Ethnicity'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,8 +450,6 @@
     "    ('onehot', OneHotEncoder(handle_unknown='ignore'))\n",
     "])\n",
     "\n",
-    "\n",
-    "# regression model\n",
     "model = LinearRegression()\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
@@ -567,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +469,6 @@
     }
    ],
    "source": [
-    "# Predict and evaluate\n",
     "model.fit(X_train, y_train)\n",
     "y_pred = model.predict(X_test)\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
@@ -588,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -618,78 +507,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Gender', 'Veteran status', 'Work authorization', 'Disability',\n",
-       "       'Ethnicity'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split, cross_val_score\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score, classification_report\n",
-    "\n",
-    "# Assuming data and target variables are defined\n",
-    "X = result.drop('prediction', axis=1)\n",
-    "y = result['prediction']\n",
-    "\n",
-    "# Split the dataset for training and testing\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "preprocessor = ColumnTransformer(\n",
-    "    transformers=[\n",
-    "        ('num', StandardScaler(), num_cols),  # Scale numerical columns\n",
-    "        ('cat', OneHotEncoder(), cate_cols)  # One-hot encode categorical columns\n",
-    "    ])\n",
-    "\n",
-    "# Create a complete pipeline: Preprocessing + Classifier\n",
-    "model = Pipeline([\n",
-    "    ('preprocessor', preprocessor),\n",
-    "    ('classifier', RandomForestClassifier(random_state=42))\n",
-    "])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on test data: 0.8055555555555556\n"
+      "Fitting 5 folds for each of 108 candidates, totalling 540 fits\n",
+      "Best parameters: {'classifier__max_depth': None, 'classifier__min_samples_leaf': 1, 'classifier__min_samples_split': 10, 'classifier__n_estimators': 200}\n",
+      "Test set accuracy: 81.48%\n"
      ]
     }
    ],
    "source": [
-    "# Evaluate the model (example using accuracy)\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "X = result.drop('prediction', axis=1)\n",
+    "y = result['prediction']\n",
     "\n",
-    "model.fit(X_train, y_train)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Predict on the test set\n",
-    "predictions = model.predict(X_test)\n",
-    "print(\"Accuracy on test data:\", accuracy_score(y_test, predictions))"
+    "numerical_transformer = Pipeline(steps=[\n",
+    "    ('imputer', SimpleImputer(strategy='mean')),  # Impute missing values with the mean\n",
+    "    ('scaler', StandardScaler())\n",
+    "])\n",
+    "\n",
+    "categorical_transformer = Pipeline(steps=[\n",
+    "    ('imputer', SimpleImputer(strategy='constant', fill_value='missing')),  # Replace missing values with 'missing'\n",
+    "    ('onehot', OneHotEncoder(handle_unknown='ignore'))\n",
+    "])\n",
+    "\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('num', numerical_transformer, num_cols),\n",
+    "        ('cat', categorical_transformer, cate_cols)\n",
+    "    ])\n",
+    "\n",
+    "model = Pipeline([\n",
+    "    ('preprocessor', preprocessor),\n",
+    "    ('classifier', RandomForestClassifier(random_state=42))\n",
+    "])\n",
+    "\n",
+    "param_grid = {\n",
+    "    'classifier__n_estimators': [100, 200, 300],\n",
+    "    'classifier__max_depth': [None, 10, 20, 30],\n",
+    "    'classifier__min_samples_split': [2, 10, 20],\n",
+    "    'classifier__min_samples_leaf': [1, 5, 10]\n",
+    "}\n",
+    "\n",
+    "grid_search = GridSearchCV(model, param_grid, cv=5, scoring='accuracy', n_jobs=-1, verbose=1)\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Best parameters:\", grid_search.best_params_)\n",
+    "\n",
+    "# Evaluate on the test set\n",
+    "best_model = grid_search.best_estimator_\n",
+    "test_accuracy = best_model.score(X_test, y_test)\n",
+    "print(\"Test set accuracy: {:.2f}%\".format(test_accuracy * 100))\n",
+    "\n",
+    "\n"
    ]
   },
   {
